k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: landing-page
  labels:
    app: landing-page
spec:
  type: ClusterIP
  selector:
    app: landing-page
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
