k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: landing-page
  namespace: landing-page
spec:
  hostnames:
    - romaine.life
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: envoy-gateway-system
    - group: gateway.networking.x-k8s.io
      kind: XListenerSet
      name: landing-page
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: landing-page
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
